Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17982

TextInput's selection is not erased when we use the keyboard arrows to go outside the boundaries of the text

    XMLWordPrintable

Details

    Description

      Steps to reproduce:

      1. Create a TextEdit element
      2. type some letters in it, like "abc"
      3. Press and hold shift, and use the left arrow to select all the text you just entered.
      4. Now release shift, and press the left arrow once again. Since the cursor is at the beginning of the text, the expected behavior is that the text should be unselected.

      Instead of that, the selection remains, but starts erasing itself when you move the cursor, either with the keyboard or the mouse. (display bug)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            gregschlom Gregory Schlomoff
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes