Update TextEdit's visible selection when only the anchor changes.

At the limits of a TextEdit's text a key press can change/reset the anchor
position without changing the cursor position.  Checking the cursor position
alone isn't enough to determine the selection hasn't changed.

Change-Id: Ic425ac0c06897d77e9c86b907ff10b39d78dd7a1
Task-number: QTBUG-17982
Reviewed-by: Martin Jones